[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0"]

[project]
name = "netmap"
license = "GPL-3.0-or-later"
description = "This is a python class to use nmap and access scan results from python3"
authors = [{ name = "Alexandre Norman", email = "norman@xael.org" }]
requires-python = ">=3.9"
keywords = ["nmap", "portscanner", "network", "sysadmin"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Topic :: System :: Monitoring",
  "Topic :: System :: Networking",
  "Topic :: System :: Networking :: Firewalls",
  "Topic :: System :: Networking :: Monitoring",
]
dynamic = ["version", "readme"]

[project.urls]
"Source code" = "https://github.com/home-assistant-libs/python-nmap"

[tool.setuptools.dynamic]
version = {attr = "nmap.__version__"}
readme = {file = ["README.rst", "CHANGELOG"]}

[tool.setuptools.packages.find]
include = ["nmap*"]
